--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="./styles.css">
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="sidebar">
+            <div class="logo">
+                <img src="./images/logo.png">
+                <div>Library</div>
+            </div>
+            <form action="">
+                <input type="text" name="title" id="title" placeholder="What is the title of the book?">
+                <input type="text" name="author" id="author" placeholder="Who is the author of the book?">
+                <input type="text" name="pages" id="pages" placeholder="How many pages are in the book?">
+                <input type="text" name="read" id="read" placeholder="Have you read this book?  (Yes / No)">
+                <button type="submit">ADD A NEW BOOK</button>
+            </form>
+        </div>
+        <div class="content">
+
+        </div>
+    </div>
 
 
 
