add delete icon in each card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="./images/logo.png">
                 <div>Library</div>
             </div>
-            <form action="">
+            <form>
                 <input required type="text" name ="title" id="title" placeholder="What is the title of the book?">
                 <input required type="text" name ="author" id="author" placeholder="Who is the author of the book?">
                 <input required type="number" name ="pages" id="pages" placeholder="How many pages are in the book?">
@@ -34,7 +34,15 @@
                 <p class="total-count"></p>
                 <button class="del-btn">DELETE ALL</button>
             </div>
-            <div class="display"></div>
+            <div class="display">
+                <!-- <div class="card">
+                    <p>Title</p>
+                    <p>Author</p>
+                    <p>Pages</p>
+                    <p>Status</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>delete</title><path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" /></svg>
+                </div> -->
+            </div>
         </div>
     </div>
     <script src="./script.js"></script>
